public static class Global
{
    #region Tags
    public const string PLAYERTAG = "Player";
    #endregion

    #region Axis
    public const string HORIZONTALAXIS = "Horizontal";
    public const string VERTICALAXIS = "Vertical";
    public const string JUMPAXIS = "Jump";
    public const string STARTAXIS = "Cancel";
    public const string FIREAXIS = "Fire1";
    #endregion

    #region Scene Names
    public const string MAINMENUSCENE = "Main Menu";
    public const string FIRSTLEVELSCENE = "Game";
    #endregion

    #region Animations
    public const string MINERGUYWALKING = "walk";
    public const string MINERGUYIDLE = "idle";
    public const string MINERGUYREPAIR = "repair";
    #endregion
}
